--- a/.github/workflows/dev-complete.yml
+++ b/.github/workflows/dev-complete.yml
@@ -50,6 +50,7 @@ jobs:
 
           next_version="$year.$((minor + 1)).0"
           echo "NEXT_VERSION=$next_version" >> $GITHUB_ENV
+          echo "NEXT_VERSION=$next_version"
         else
           echo "No version match"
           exit 1
@@ -58,7 +59,6 @@ jobs:
     # Step 5: Update the VERSION file with the new version
     - name: Update VERSION file and push new branch using GitHub CLI
       run: |
-        gh auth login --with-token < ${{ secrets.GITHUB_TOKEN }}
         next_version_branch="bump-version-${{ env.NEXT_VERSION }}"
         git checkout -b $next_version_branch
         echo "${{ env.NEXT_VERSION }}" > VERSION
