--- a/.github/workflows/dev-complete.yml
+++ b/.github/workflows/dev-complete.yml
@@ -70,3 +70,5 @@ jobs:
     - name: Create pull request using GitHub CLI
       run: |
         gh pr create --base develop --head bump-version-${{ env.NEXT_VERSION }} --title "Bump version to ${{ env.NEXT_VERSION }}" --body "This PR bumps the version to ${{ env.NEXT_VERSION }}."
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
